--- a/public/contact.html
+++ b/public/contact.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
     .bg-watermark {
-      position: fixed;
-      top: 0; left: 0; width: 100vw; height: 100vh;
+      /* No position here, set in main */
       pointer-events: none;
       z-index: 0;
       opacity: 0.07;
@@ -26,24 +25,9 @@
         background-position: 5% 10%, 70% 5%, 20% 60%, 60% 80%;
       }
     }
-    html, body {
-      height: 100%;
-    }
-    body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    main {
-      flex: 1 0 auto;
-    }
-    footer {
-      flex-shrink: 0;
-    }
   </style>
 </head>
-<body class="dark bg-gradient-to-br from-gray-900 via-gray-800 to-blue-900 text-gray-100 relative overflow-x-hidden">
-  <div class="bg-watermark"></div>
+<body class="min-h-screen flex flex-col dark bg-gradient-to-br from-gray-900 via-gray-800 to-blue-900 text-gray-100 relative overflow-x-hidden">
   <header class="bg-blue-600 dark:bg-gray-800 p-4 text-white shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
     <h1 class="text-2xl font-bold animate__animated animate__fadeInLeft">Contact Me</h1>
   </header>
@@ -54,42 +38,45 @@
     <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
     <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
   </nav>
-  <main class="container mx-auto p-4 sm:p-6 relative z-10">
-    <section class="mb-12 animate__animated animate__fadeInUp">
-      <h2 class="text-2xl font-bold mb-4 flex items-center gap-2">
-        <svg class="h-7 w-7 text-blue-400 animate__animated animate__bounceIn" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l2.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6A8.38 8.38 0 0112 3a8.5 8.5 0 019 7.5z"/></svg>
-        Get in Touch
-      </h2>
-      <div class="flex flex-col gap-6 justify-center animate__animated animate__fadeInRight mt-8">
-        <div class="bg-gray-800 bg-opacity-80 rounded-xl p-6 shadow flex flex-col gap-4">
-          <h3 class="text-lg font-semibold mb-2">Connect with me:</h3>
-          <a href="https://www.linkedin.com/in/tanmaya-choudhury-25b110300" target="_blank" class="flex items-center gap-3 text-blue-400 hover:text-blue-300 transition-colors duration-300 text-lg font-medium">
-            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.37-1.54 2.82-1.54 3.01 0 3.57 1.98 3.57 4.56v4.75z"/></svg>
-            LinkedIn
-          </a>
-          <a href="https://github.com/yourprofile" target="_blank" class="flex items-center gap-3 text-gray-100 hover:text-blue-400 transition-colors duration-300 text-lg font-medium">
-            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .5C5.73.5.5 5.73.5 12c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56v-2.01c-3.2.7-3.87-1.54-3.87-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.75.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.29 1.19-3.09-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11.1 11.1 0 012.9-.39c.98.01 1.97.13 2.9.39 2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.11 3.04.74.8 1.19 1.83 1.19 3.09 0 4.43-2.7 5.41-5.27 5.7.42.36.8 1.09.8 2.2v3.26c0 .31.21.67.8.56C20.71 21.39 24 17.08 24 12c0-6.27-5.23-11.5-12-11.5z"/></svg>
-            GitHub
-          </a>
-          <a href="mailto:your.email@example.com" class="flex items-center gap-3 text-green-400 hover:text-green-300 transition-colors duration-300 text-lg font-medium">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M16 12H8m8 0a4 4 0 11-8 0 4 4 0 018 0zm0 0v1a4 4 0 01-8 0v-1"></path></svg>
-            Email
-          </a>
+  <main class="flex-1 min-h-full relative p-4 sm:p-6">
+    <div class="bg-watermark absolute inset-0 z-0"></div>
+    <div class="relative z-10">
+      <section class="mb-12 animate__animated animate__fadeInUp">
+        <h2 class="text-2xl font-bold mb-4 flex items-center gap-2">
+          <svg class="h-7 w-7 text-blue-400 animate__animated animate__bounceIn" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l2.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6A8.38 8.38 0 0112 3a8.5 8.5 0 019 7.5z"/></svg>
+          Get in Touch
+        </h2>
+        <div class="flex flex-col gap-6 justify-center animate__animated animate__fadeInRight mt-8">
+          <div class="bg-gray-800 bg-opacity-80 rounded-xl p-6 shadow flex flex-col gap-4">
+            <h3 class="text-lg font-semibold mb-2">Connect with me:</h3>
+            <a href="https://www.linkedin.com/in/tanmaya-choudhury-25b110300" target="_blank" class="flex items-center gap-3 text-blue-400 hover:text-blue-300 transition-colors duration-300 text-lg font-medium">
+              <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.37-1.54 2.82-1.54 3.01 0 3.57 1.98 3.57 4.56v4.75z"/></svg>
+              LinkedIn
+            </a>
+            <a href="https://github.com/yourprofile" target="_blank" class="flex items-center gap-3 text-gray-100 hover:text-blue-400 transition-colors duration-300 text-lg font-medium">
+              <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .5C5.73.5.5 5.73.5 12c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56v-2.01c-3.2.7-3.87-1.54-3.87-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.75.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.29 1.19-3.09-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11.1 11.1 0 012.9-.39c.98.01 1.97.13 2.9.39 2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.11 3.04.74.8 1.19 1.83 1.19 3.09 0 4.43-2.7 5.41-5.27 5.7.42.36.8 1.09.8 2.2v3.26c0 .31.21.67.8.56C20.71 21.39 24 17.08 24 12c0-6.27-5.23-11.5-12-11.5z"/></svg>
+              GitHub
+            </a>
+            <a href="mailto:your.email@example.com" class="flex items-center gap-3 text-green-400 hover:text-green-300 transition-colors duration-300 text-lg font-medium">
+              <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M16 12H8m8 0a4 4 0 11-8 0 4 4 0 018 0zm0 0v1a4 4 0 01-8 0v-1"></path></svg>
+              Email
+            </a>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="animate__animated animate__fadeInUp animate__delay-3s flex flex-col items-center mt-12">
-      <h2 class="text-xl font-semibold mb-4">Download My Resume</h2>
-      <a href="path/to/your/resume.pdf"
-         class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-700 hover:to-blue-900 text-white px-8 py-3 rounded-full shadow-lg font-bold text-lg transition transform hover:scale-105 animate__animated animate__pulse animate__infinite"
-         download>
-        <svg class="h-6 w-6 inline-block mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4m-8 8h8"/></svg>
-        Download Resume
-      </a>
-    </section>
+      </section>
+      <section class="animate__animated animate__fadeInUp animate__delay-3s flex flex-col items-center mt-12">
+        <h2 class="text-xl font-semibold mb-4">Download My Resume</h2>
+        <a href="path/to/your/resume.pdf"
+           class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-700 hover:to-blue-900 text-white px-8 py-3 rounded-full shadow-lg font-bold text-lg transition transform hover:scale-105 animate__animated animate__pulse animate__infinite"
+           download>
+          <svg class="h-6 w-6 inline-block mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4m-8 8h8"/></svg>
+          Download Resume
+        </a>
+      </section>
+    </div>
   </main>
-  <footer class="bg-blue-600 dark:bg-gray-800 p-4 text-white text-center shadow-lg animate__animated animate__fadeInUp">
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
+  <footer class="bg-blue-600 dark:bg-gray-800 text-white p-4 text-center shadow-lg animate__animated animate__fadeInUp">
+    <p>&copy; 2023 My DevOps Portfolio</p>
   </footer>
   <script>
     // Reveal sections on scroll
